--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,12 +27,13 @@ plugins:
 nav:
   - Home: index.md
   - Tutorials:
-      - 000 - K3s Memulai: tutorials/000-k3s-getting-started.md
+      - 000 - Memulai dengan K3s: tutorials/000-k3s-getting-started.md
+      - 001 - Longhorn (Persistent Storage): tutorials/001-longhorn.md
   - How-to Guides:
       - 000 - K3s Multi-Node: how-to/000-k3s-multi-node.md
       - 001 - MetalLB (LoadBalancer): how-to/001-metallb-loadbalancer.md
+      - 002 - Longhorn (Persistent Storage): how-to/002-longhorn.md
   - Reference:
-      - 000 - Configuration: reference/000-config.md
-      - 001 - Traefik (Ingress K3s): reference/001-traefik.md
+      - 000 - Traefik (Ingress K3s): reference/001-traefik.md
   - Explanation:
       - 000 - Architecture: explanation/000-architecture.md
