--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,3 +38,7 @@ nav:
       - 000 - Traefik (Ingress K3s): reference/001-traefik.md
   - Explanation:
       - 000 - Architecture: explanation/000-architecture.md
+  - Donasi:
+      - Saweria: https://saweria.co/agung96tm
+      # - Trakteer: https://trakteer.id/username
+      # tambah platform lain di sini
