--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,23 +29,23 @@ plugins:
 nav:
   - Home: index.md
   - Tutorials:
-      - 000 - Memulai dengan K3s: tutorials/000-k3s-getting-started.md
-      - 001 - Longhorn (Persistent Storage): tutorials/001-longhorn.md
-      - 002 - Let's Encrypt (cert-manager): tutorials/002-letsencrypt-cert-manager.md
+      - Memulai dengan K3s: tutorials/000-k3s-getting-started.md
+      - Longhorn (Persistent Storage): tutorials/001-longhorn.md
+      - Let's Encrypt (cert-manager): tutorials/002-letsencrypt-cert-manager.md
   - How-to Guides:
-      - 000 - K3s Multi-Node: how-to/000-k3s-multi-node.md
-      - 001 - MetalLB (LoadBalancer): how-to/001-metallb-loadbalancer.md
-      - 002 - Longhorn (Persistent Storage): how-to/002-longhorn.md
-      - 003 - Let's Encrypt (cert-manager): how-to/003-letsencrypt-cert-manager.md
-      - 004 - Adminer: how-to/004-adminer.md
-      - 005 - GlitchTip: how-to/005-glitchtip.md
-      - 006 - Metabase: how-to/006-metabase.md
-      - 007 - WAHA: how-to/007-waha.md
+      - K3s Multi-Node: how-to/000-k3s-multi-node.md
+      - MetalLB (LoadBalancer): how-to/001-metallb-loadbalancer.md
+      - Longhorn (Persistent Storage): how-to/002-longhorn.md
+      - Let's Encrypt (cert-manager): how-to/003-letsencrypt-cert-manager.md
+      - Adminer: how-to/004-adminer.md
+      - GlitchTip: how-to/005-glitchtip.md
+      - Metabase: how-to/006-metabase.md
+      - WAHA: how-to/007-waha.md
   - Reference:
-      - 000 - Traefik (Ingress K3s): reference/001-traefik.md
+      - Traefik (Ingress K3s): reference/001-traefik.md
   - Explanation:
-      - 000 - Architecture: explanation/000-architecture.md
+      - Architecture: explanation/000-architecture.md
   - Donasi:
       - Saweria: https://saweria.co/agung96tm
-      # - Trakteer: https://trakteer.id/username
+      - Trakteer: https://trakteer.id/agung96tm
       # tambah platform lain di sini
